# exercise01

./: .gitmodules  CMakeLists.txt  config.h.in  main.cpp
.github/workflows/: release.yml
.guthub/workflows/: release.yml
Lib/: CMakeLists.txt  lib.cpp  lib.h
Test/: CMakeLists.txt  test.cpp
